plugin/src/test/files/neg/eq_contramap.check
eq_contramap.scala:15: error: Non-propositional expression involving typeclasses.
  val eqLonger: Eq[Long] = Eq.eqInt.contramap(_.toInt) // bad
                                             ^
one error found
